# private_solvers

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: bindings.yaml  ci.yaml
config/: config.json  with-local.json
crates/bindings-balancer/: Cargo.toml
crates/bindings-balancer/src/: vault.rs
crates/bindings-khalani/src/: aave_v3_strategy.rs  abstract_gas_paymaster.rs  abstract_request_processor.rs  access_control_enumerable.rs  address.rs  address_upgradeable.rs  asset_reserves.rs  base_intent_book.rs  base_rewarder.rs  base_strategy.rs  bridge_facet.rs  clones.rs  constants.rs  create_2_lib.rs  cross_chain_register.rs  default_request_processor.rs  (+165 more)
cross-chain-market-maker/: Cargo.toml
cross-chain-market-maker/src/: lib.rs  main.rs
intentbook-matchmaker/: Cargo.toml
intentbook-matchmaker/src/: main.rs
solver-common/: Cargo.toml
solver-common/src/: error.rs  lib.rs
spoke-chain-caller/: Cargo.toml
spoke-chain-caller/src/: lib.rs  main.rs
spoke-chain-caller/src/migrations/: 01_create_intent_state.sql
spoke-chain-caller/src/types/: mod.rs  spoke_chain_call.rs  spoke_chain_call_bid.rs
spoke-chain-caller/src/workflow/: action.rs  event.rs  mod.rs
spoke-chain-caller/src/workflow/collectors/: action_confirmation_collector.rs  intentbook_source.rs  mod.rs  spoke_chain_call_collector.rs  spoke_chain_call_intent_collector.rs
spoke-chain-caller/src/workflow/collectors/ethereum/: mod.rs  spoke_chain_call_intentbook_source.rs  spoke_chain_call_intents_book_source.rs
spoke-chain-caller/src/workflow/engine/: mod.rs
spoke-chain-caller/src/workflow/executors/: bid_intent.rs  bid_intent_executor.rs  call_spoke_executor.rs  match_intent.rs  match_intent_executor.rs  mod.rs
spoke-chain-caller/src/workflow/executors/ethereum/: mod.rs  send_transaction_bid_intent_handler.rs  send_transaction_call_spoke_handler.rs  send_transaction_match_intent_handler.rs
spoke-chain-caller/src/workflow/state/: database_state_manager.rs  in_memory_state_manager.rs  mod.rs  state_manager.rs
spoke-chain-caller/src/workflow/strategies/: intents_strategy.rs
spoke-chain-caller/tests/: mod.rs
spoke-chain-caller/tests/executors/: call_spoke_executor_test.rs
src/: error.rs  lib.rs  main.rs
src/collectors/: intents_collector.rs  locked_tokens_collector.rs  mod.rs  quoted_intents_collector.rs
src/config/: addresses.rs  balancer.rs  chain.rs  config.rs  mod.rs  token.rs
src/connectors/: connector.rs  mod.rs
src/diagnostics/: logs.rs
src/ethereum/: transaction.rs
src/executors/: intents_executor.rs  mod.rs  quoter_executor.rs
src/inventory/: amount.rs  inventory.rs  mod.rs  token.rs  token_balance_query.rs
src/quote/: intent_quoter.rs  interchain_liquidity_hub_quoter.rs  mod.rs  quoted_intent.rs
src/strategies/: intents_strategy.rs  mod.rs  types.rs
src/types/: mod.rs  swap_intent.rs
src/workflow/: action.rs  event.rs  mod.rs
swap-intent-settler/: Cargo.toml
swap-intent-settler/src/: lib.rs  main.rs
swap-intent-settler/tests/: common.rs  mod.rs
tests/: common.rs  integration_test.rs  mod.rs
tests/collectors/: mod.rs  quoted_intents_collector.rs
tests/executors/: swap_and_bridge_executor_test.rs
tests/inventory/: inventory_test.rs  mod.rs  token_test.rs
tests/quote/: interchain_liquidity_hub_quoter_test.rs  mod.rs
tests/strategy/: strategy_test.rs
(+178 files in other folders)
