[package]
name = "khalani-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artemis-core = { git = "https://github.com/paradigmxyz/artemis" }
tokio = { version = "1.34.0", features = ["full"] }
clap = { version = "4.4.7", features = ["derive"] }
ethers = { version = "2.0.10" }
