[package]
name = "khalani-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings-khalani = { path = "./crates/bindings-khalani" }

artemis-core = { git = "https://github.com/paradigmxyz/artemis" }
tokio = { version = "1.34.0", features = ["full"] }
clap = { version = "4.4.7", features = ["derive"] }
ethers = { version = "2.0.10" }
async-trait = "0.1.74"
anyhow = "1.0.75"
alloy-primitives = "0.2.0"
futures = "0.3.29"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
