[package]
name = "khalani-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings-khalani = { path = "./crates/bindings-khalani" }
bindings-balancer = { path = "./crates/bindings-balancer" }

artemis-core = { git = "https://github.com/paradigmxyz/artemis" }
tokio = { version = "1.34.0", features = ["full", "test-util"] }
clap = { version = "4.4.7", features = ["derive"] }
ethers = { version = "2.0.10" }
async-trait = "0.1.74"
anyhow = "1.0.75"
alloy-primitives = "0.2.0"
futures = "0.3.29"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
async-stream = "0.3.5"
thiserror = "1.0"

[workspace.dependencies]
bindings-khalani = { path = "./crates/bindings-khalani" }
bindings-balancer = { path = "./crates/bindings-balancer" }
artemis-core = { git = "https://github.com/paradigmxyz/artemis" }
tokio = { version = "1.34.0", features = ["full", "test-util"] }
clap = { version = "4.4.7", features = ["derive"] }
ethers = { version = "2.0.10" }
async-trait = "0.1.74"
anyhow = "1.0.75"
alloy-primitives = "0.2.0"
futures = "0.3.29"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
async-stream = "0.3.5"

[workspace]
members = [
    ".",
    "spoke-chain-caller",
    "cross-chain-market-maker",
    "swap-intent-settler",
    "intentbook-matchmaker"
]

[workspace.package]
edition = "2021"
publish = false
version = "0.1.0"